ENTRYSTORE-695 #comment Adding restrictive CSP for proxy requests